--- a/flexrental/index.html
+++ b/flexrental/index.html
@@ -187,9 +187,9 @@
         </div>
         <div class="side">
             <ul>
-                <li><a href="#">네이버톡톡<br>상담</a></li>
-                <li><a href="#">카카오톡<br>상담</a></li>
-                <li><a href="#">전화<br>상담</a></li>
+                <li><a href="#"><img src="./images/naver_talk.png" alt="네이버톡톡">네이버톡톡<br>상담</a></li>
+                <li><a href="#"><img src="./images/kakao.png" alt="카카오톡">카카오톡<br>상담</a></li>
+                <li><a href="#"><img src="./images/call.png" alt="전화">전화상담</a></li>
             </ul>
         </div>
         <!--        모델창-->
