--- a/mapapi/index.html
+++ b/mapapi/index.html
@@ -18,85 +18,30 @@
 		};
 
 		var map = new kakao.maps.Map(container, options);
-        var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
-		    mapOption = {
-		        center: new kakao.maps.LatLng(37.56682, 126.97865), // 지도의 중심좌표
-		        level: 3, // 지도의 확대 레벨
-		        mapTypeId : kakao.maps.MapTypeId.ROADMAP // 지도종류
-		    }; 
+        // 주소로 좌표를 검색합니다
+        geocoder.addressSearch('서울특별시 금천구 가산로 147', function(result, status) {
 
-		// 지도를 생성한다 
-		var map = new kakao.maps.Map(mapContainer, mapOption); 
+        // 정상적으로 검색이 완료됐으면 
+            if (status === kakao.maps.services.Status.OK) {
 
-		// 지도에 확대 축소 컨트롤을 생성한다
-		var zoomControl = new kakao.maps.ZoomControl();
+            var coords = new kakao.maps.LatLng(result[0].y, result[0].x);
 
-		// 지도의 우측에 확대 축소 컨트롤을 추가한다
-		map.addControl(zoomControl, kakao.maps.ControlPosition.RIGHT);
+            // 결과값으로 받은 위치를 마커로 표시합니다
+            var marker = new kakao.maps.Marker({
+                map: map,
+                position: coords
+            });
 
-		// 지도 확대 레벨 변화 이벤트를 등록한다
-		kakao.maps.event.addListener(map, 'zoom_changed', function () {
-			console.log('지도의 현재 확대레벨은 ' + map.getLevel() +'레벨 입니다.');
-		});
+            // 인포윈도우로 장소에 대한 설명을 표시합니다
+            var infowindow = new kakao.maps.InfoWindow({
+                content: '<div style="width:150px;text-align:center;padding:6px 0;">우리집</div>'
+            });
+            infowindow.open(map, marker);
 
-		// 지도 영역 변화 이벤트를 등록한다
-		kakao.maps.event.addListener(map, 'bounds_changed', function () {
-			var mapBounds = map.getBounds(),
-				message = '지도의 남서쪽, 북동쪽 영역좌표는 ' +
-							mapBounds.toString() + '입니다.';
-
-			console.log(message);	
-		});
-
-		// 지도 시점 변화 완료 이벤트를 등록한다
-		kakao.maps.event.addListener(map, 'idle', function () {
-			var message = '지도의 중심좌표는 ' + map.getCenter().toString() + ' 이고,' + 
-							'확대 레벨은 ' + map.getLevel() + ' 레벨 입니다.';
-			console.log(message);
-		});
-
-		// 지도 클릭 이벤트를 등록한다 (좌클릭 : click, 우클릭 : rightclick, 더블클릭 : dblclick)
-		kakao.maps.event.addListener(map, 'click', function (mouseEvent) {
-			console.log('지도에서 클릭한 위치의 좌표는 ' + mouseEvent.latLng.toString() + ' 입니다.');
-		});	
-
-		// 지도에 마커를 생성하고 표시한다
-		var marker = new kakao.maps.Marker({
-		    position: new kakao.maps.LatLng(37.56682, 126.97865), // 마커의 좌표
-		    draggable : true, // 마커를 드래그 가능하도록 설정한다
-		    map: map // 마커를 표시할 지도 객체
-		});
-
-		// 마커 위에 표시할 인포윈도우를 생성한다
-		var infowindow = new kakao.maps.InfoWindow({
-		    content : '<div style="padding:5px;">인포윈도우 :D</div>' // 인포윈도우에 표시할 내용
-		});
-
-		// 인포윈도우를 지도에 표시한다
-		infowindow.open(map, marker);
-
-		// 커스텀 오버레이를 생성하고 지도에 표시한다
-		var customOverlay = new kakao.maps.CustomOverlay({
-			map: map,
-			content: '<div style="padding:0 5px;background:#fff;">HTML코드를 입력해주세요 :D</div>', 
-			position: new kakao.maps.LatLng(37.56682, 126.97865), // 커스텀 오버레이를 표시할 좌표
-			xAnchor: 0.5, // 컨텐츠의 x 위치
-			yAnchor: 0 // 컨텐츠의 y 위치
-		});
-
-		// 지도에 원을 표시한다
-		var circle = new kakao.maps.Circle({
-			map: map, // 원을 표시할 지도 객체
-			center : new kakao.maps.LatLng(37.56782, 126.97665), // 지도의 중심 좌표
-			radius : 50, // 원의 반지름 (단위 : m)
-			fillColor: '#FF0000', // 채움 색
-			fillOpacity: 0.5, // 채움 불투명도
-			strokeWeight: 3, // 선의 두께
-			strokeColor: '#FF0000', // 선 색
-			strokeOpacity: 0.9, // 선 투명도 
-			strokeStyle: 'dash' // 선 스타일
-		});	
-
+            // 지도의 중심을 결과값으로 받은 위치로 이동시킵니다
+            map.setCenter(coords);
+        } 
+}); 
 	</script>
 </body>
 </html>
