--- a/quescrem/index.html
+++ b/quescrem/index.html
@@ -34,16 +34,16 @@
                     <div class="swiper mySwiper">
                         <div class="swiper-wrapper">
                           <div class="swiper-slide">
-                              <!-- <img src="./img/s_01.jpg" alt=""> -->
+                              <img src="./img/s_01.jpg" alt="">
                           </div>
                           <div class="swiper-slide">
-                              <!-- <img src="./img/s_02.jpg" alt=""> -->
+                              <img src="./img/s_02.jpg" alt="">
                           </div>
                           <div class="swiper-slide">
-                              <!-- <img src="./img/s_03.jpg" alt=""> -->
+                              <img src="./img/s_03.jpg" alt="">
                           </div>
                           <div class="swiper-slide">
-                              <!-- <img src="./img/s_04.jpg" alt=""> -->
+                              <img src="./img/s_04.jpg" alt="">
                           </div>
                         </div>
                     </div>
